plugins {
    id 'org.springframework.boot' version '2.7.3'
    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
    id 'java'
}

def elasticVersion = '7.10.2'

group = 'uk.gov.digital.ho.hocs'
sourceCompatibility = JavaVersion.VERSION_17

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.cloud:spring-cloud-aws-messaging:2.2.6.RELEASE'
    implementation 'com.vladmihalcea:hibernate-types-55:2.19.0'
    implementation 'net.logstash.logback:logstash-logback-encoder:7.2'
    implementation 'com.github.awslabs:aws-request-signing-apache-interceptor:b3772780da'
    implementation "org.elasticsearch:elasticsearch:${elasticVersion}"
    implementation "org.elasticsearch.client:elasticsearch-rest-client:${elasticVersion}"
    implementation "org.elasticsearch:elasticsearch-core:${elasticVersion}"
    implementation "org.elasticsearch:elasticsearch-secure-sm:${elasticVersion}"
    implementation "org.elasticsearch.client:elasticsearch-rest-high-level-client:${elasticVersion}"
    implementation "com.google.guava:guava:31.1-jre"
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework:spring-context-indexer:5.3.22'
    annotationProcessor 'org.springframework:spring-context-indexer:5.3.22'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    testImplementation 'org.flywaydb:flyway-core:8.5.13'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.36.0'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.3"
    }
}

jar {
    enabled = false
}

test {
    useJUnitPlatform()
}